<resources>
    <string name="app_name">WatchStore App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="watches">Watches</string>
    <string name="menu">Menu</string>
    <string name="profile_image">Profile Image</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="mobile_no">Mobile No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="checkout_exclusive_watches_from_top_brand">Checkout Exclusive Watches from Top Brand</string>
    <string name="get_now">Get Now!!</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="success_message">Thanks for Placing the Order. Order Placed Successfully. Keep Shopping!!!</string>
    <string name="watchStore">Watch Store</string>
</resources>