<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/drawer_ll"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/_10sdp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        >

    <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/profileImage"
            android:src="@drawable/profilepic"
            android:scaleType="fitCenter"
            app:riv_corner_radius="30dip"
            app:riv_border_width="2dip"
            app:riv_border_color="#333333"
            app:riv_mutate_background="true"
            app:riv_tile_mode="repeat"
            app:riv_oval="true"
            android:layout_marginTop="@dimen/_10sdp">

    </com.makeramen.roundedimageview.RoundedImageView>

    <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:paddingLeft="@dimen/_6sdp"
            android:text="@string/user_name"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/white"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

    <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email"
            android:paddingLeft="@dimen/_6sdp"
            android:fontFamily="@font/montserrat_mediumitalic"
            android:textColor="@color/white"
            android:id="@+id/UserEmail"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_no"
            android:paddingLeft="@dimen/_6sdp"
            android:fontFamily="@font/montserrat_mediumitalic"
            android:textColor="@color/white"
            android:id="@+id/UserMobile"/>
</LinearLayout>